done text editting for the second draft (ie added KM comments)

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -1049,8 +1049,8 @@ terrestrial to gaseous planets despite the latter being inherently rare around t
   \centering
   \includegraphics[width=0.9\hsize]{figures/rpvMsFULL_KepK2.png}
   \caption{Evolution of the radius valley features with stellar mass. \emph{Solid markers}:
-    the occurrence rate-weighted locations of the terrestrial planet peak (\emph{red markers}), the
-    radius valley (\emph{black markers}) and the gaseous planet peak (\emph{blue markers})
+    the occurrence rate-weighted locations of the gaseous planet peak (\emph{blue markers}), the
+    radius valley (\emph{black markers}) and the terrestrial planet peak (\emph{red markers})
     as a function of host stellar mass. Measurements around Sun-like stars with $M_s>0.8$ M$_{\odot}$ are
     retrieved from \cite{fulton18} (\emph{open circles}). Feature radii from our full sample with a median value of
     $M_s = 0.651^{+0.058}_{-0.096}$ M$_{\odot}$ are depicted as \emph{filled circles}. \emph{Filled squares}
@@ -1105,7 +1105,7 @@ the detection sensitivity to planets spanning the radius valley (see Sect.~\ref{
 
 
 \section{Discussion} \label{sect:discussion}
-\subsection{Improving constraints on the occurrence rate of small close-in planets orbiting mid-M dwarfs} \label{sect:improve}
+\subsection{Improving constraints on the sculpting of the radius valley using mid-M dwarfs} \label{sect:improve}
 The issue of having insufficient information to distinguish between photoevaporation, core-powered mass loss, and gas-poor
 formation around low mass stars can be addressed with two steps. Firstly, by expanding the low mass stellar sample in 
 transiting planet searches and secondly, by quantifying the detection sensitivity in those searches. 
@@ -1115,32 +1115,32 @@ close-in planets around low mass stars down to M5V ($M_s\sim 0.16$ M$_{\odot}$) 
 and its high cadence (2 minute) observations of 200,000-400,000 stars over $\sim 94$\% of the sky by the completion of its
 recently approved extended mission.
 
-The \tess{} primary mission, lasting one year, has been ongoing since July 2018. 
+The \tess{} primary mission---lasting one year---has been ongoing since July 2018. 
 Based on the photometric performance of the mission and consequently on the success of planet searches by the
 Science Processing Operations Center \citep[SPOC;][]{jenkins16,twicken18,li18} at the time of writing,
 we can estimate the number of low mass stars required to be observed
-by \tess{} to enable robust conclusions regarding the nature of the radius valley's formation. These calculations
+by \tess{} to enable robust conclusions regarding the nature of the emergence of the radius valley. These calculations
 proceed by noting that the measurement uncertainty on the feature locations from binomial statistics scales as
 $\sqrt{N_sP(1-P)}$ where $N_s$ is the number of observed stars and $P$ is the probability of detecting a planet close to
 the radius valley 
 given the detection sensitvity, the transit proability, and their inherent rate of occurrence (see Eq.~\ref{eq:prob}).
-Through sectors 1-14, \tess{} has observed $N_{s,\text{TESS}} = 23051$ stars less massive than 0.4 M$_{\odot}$
+Through sectors 1-14, \tess{} has observed $N_{s,\text{TESS}} = 23,051$ stars less massive than 0.4 M$_{\odot}$
 with 2 minute cadence from its Candidate Target List \citep[CTL;][]{stassun19}.
 Among these stars, the SPOC has reported three objects of interest close to the radius valley
 between $1.4-1.6$ R$_{\oplus}$. Assuming a 0\% false positive rate
 among these planet candidates, and the same MAP occurrence rate measured with \kepler{}
 ($f_{\text{valley}}\approx 0.19$ planets per star), we find the probability of \tess{} to detect a transiting planet
 spanning the radius valley around a star with $M_s<0.4$ M$_{\odot}$ to be 
-$P_{\text{valley,TESS}}=1.30 \times 10^{-4}$. We can compare these to the \kepler{} values of $N_{s,\text{Kep}}=33$ and
-$P_{\text{valley,Kep}}=8.56\times 10^{-3}$ to scale the uncertainty on $f_{\text{valley}}$, and hence on the radius
-valley location, as an increasing number of mid-to-late M dwarfs are observed with 2 minute cadence with \tess{.}
+$P_{\text{valley,TESS}}=1.30 \times 10^{-4}$. We can compare these numbers to the \kepler{} values of $N_{s,\text{Kep}}=33$ and
+$P_{\text{valley,Kep}}=8.56\times 10^{-3}$ to scale the uncertainty on $f_{\text{valley}}$---and hence on the radius
+valley location---as an increasing number of mid-to-late M dwarfs are observed with 2 minute cadence with \tess{.}
 
-The resulting improvement in the measurement precision of the radius valley with observations of additional mis-to-late
+The resulting improvement in the measurement precision of the radius valley with observations of additional mid-to-late
 M dwarfs is shown in Fig.~\ref{fig:improve}.
 The \tess{} curve reveals how precisely the location of the radius valley can be measured given \tess{'s} approximate 
 detection sensivity to planets spanning the radius valley and as the number of low mass stars observed with 2 minute
 cadence is increased. Note that the improvement allotted by \tess{} should only be interpretted as an
-approximation given that its detection sensitivity has not been adequately characterized. In our calculations, the
+approximation given that its detection sensitivity has not yet been adequately characterized. In our calculations, the
 \tess{} detection sensitivity is estimated as a constant value as described in the preceding paragraph. 
 
 \begin{figure*}
@@ -1166,20 +1166,20 @@ stellar mass of 0.35 M$_{\odot}$. Based on the model curves in Fig.~\ref{fig:rpv
 this required precision corresponds to a radius vally uncertainty of $\sim 0.12$ R$_{\oplus}$. A very similar level
 of precision would be required to distinguish between photoevaporation and gas-poor formation as well.
 The approximate \tess{} detection sensitivity implies that \tess{} will be required to observe $\sim 85,000$ mid-to-late M dwarfs
-to distinguish between model predictions of photoevaporation and core-powered mass low or gas-poor formation at $3\sigma$.
-At the time of writing, only 23051 such stars have been targeted with 2 minute cadence. Extrapolating to end of \tess{'s}
+to distinguish between model predictions of photoevaporation and core-powered mass loss or gas-poor formation at $3\sigma$.
+At the time of writing, only 23,051 such stars have been targeted with 2 minute cadence. Extrapolating to the end of \tess{'s}
 primary mission, we expect a total of $\sim 42,000$ such stars to be observed with 2 minute cadence. If the \tess{} detection
-sensitivity is well-characterized by that time and is roughly consistent with the approximate value assumed here then \tess{}
+sensitivity is well-characterized by that time and is roughly consistent with the approximate value assumed here, then \tess{}
 could achieve a radius valley uncertainty of $\sim 0.17$ R$_{\oplus}$ by the end of its prime mission.
 This would still be useful for constraining radius valley formation models as predictions from photoevaporation and
-core-powered mass loss, or gas-poor formation, could be distingiushed at $\sim 2.1\sigma$ with this level of precision.
+core-powered mass loss---or gas-poor formation---could be distingiushed at $\sim 2.1\sigma$ with this level of precision.
 Note that these calculations do not include non-CTL stars that may be targeted in the 30 minute \tess{} Full Frame Images
-and could also contribute to occurrence rate measurements. Albeit with a reduced detection sensitivity.
+and could also contribute to the occurrence rate measurements, albeit with a reduced detection sensitivity.
 
 Also included in Fig.~\ref{fig:improve} is the curve for a hypothetical continuation of the primary \kepler{} mission.
 The calculation reveals that had \kepler{} been able to continue its prime mission and had
 access to thousands of additional mid-M dwarfs than were targeted in the primary \kepler{} field, then the location
-of the radius valley could have been precisely measured with $\sim 1200$ stars observed.
+of the radius valley could have been precisely measured with $\sim 1200$ observed stars.
 
 The stellar input catalog for the up-coming ESA \plato{} mission \citep{rauer14} has yet to be defined. The primary goal
 of \plato{} is to detect and characterize transiting habitable zone planets around bright FGK stars. Despite this,
@@ -1189,7 +1189,8 @@ the PLATO Input Catalog (PIC) known as sample P4 will target $\geq 5000$ M dwarf
 the mission's Long-Duration Observing Phase (LOP) lasting a minimum of two years. Furthermore, the expected random
 noise in P4 is 800 ppm on one hour timescales. To compute the probability of
 detecting a radius valley planet around a mid-to-late M dwarf targeted by \plato{,} we first assume that for a given
-transit S/N, \plato{'s} detection sensivity will be equivalent to that of \kepler{.} We fix the transit S/N
+transit S/N, \plato{'s} detection sensivity will be equivalent to that of \kepler{} (Fig.~\ref{fig:senscurves}).
+We fix the transit S/N
 (Eq.~\ref{eq:snr}) of a radius valley planet orbiting a mid-M dwarf using the values $r_p=1.5$ R$_{\oplus}$, $R_s=0.35$
 R$_{\odot}$, $M_s=0.35$ M$_{\odot}$, CDPP$_{1\text{ hr}}=800$ ppm, and $n_{\text{transits}}=73$ for stars in the LOP observing
 phase. We note the inexact nature of this calculation which
@@ -1202,12 +1203,12 @@ Although the exact P4 M dwarf sample is not yet defined, recent developments
 at the September 2019 PIC Workshop in Italy\footnote{\url{https://indico.ict.inaf.it/event/806/}} concluded that the
 properties of the sample will be consistent with M dwarf stars in the solar vicinity. Although this statement
 if very rough and not binding to the final definition of the PIC, we combine this expectation with knowledge of M dwarfs
-in the solar neightbourhood to estimate the number of mid-to-late M dwarfs in the P4 sample. We do so by retrieving
+in the solar neighborhood to estimate the number of mid-to-late M dwarfs in the P4 sample. We do so by retrieving
 the M dwarf sample within 25 pc from \cite{winters19}. Noting that this volume-limited sample is $\sim 33$\% complete
 (J. Winters private communication), we identify $\sim 2829$ M dwarfs within 25 pc and with $V<16$.
 We then scale up the M dwarf population beyond 25 pc until 5000 stars with $V<16$ are included assuming a homogenous M
-dwarf population beyond 25 pc. Of those stars which represent probable targets within the P4 sample, 3358 have masses
-$<0.4$ M$_{\odot}$. With this many mid-to-late M dwarfs targeted by \plato{,} we expect the radius valley uncertainty
+dwarf population beyond 25 pc. Of those stars representing probable targets within the P4 sample, 3358 have masses
+$<0.4$ M$_{\odot}$. With this many mid-to-late M dwarfs targeted by \plato{} we expect the radius valley uncertainty
 to reach $\sim 0.14$ R$_{\oplus}$ which would enable models of photoevaporation is be distrignshed from models of
 core-powered mass low or gas-poor formation at $\sim 2.6\sigma$.
 
@@ -1223,7 +1224,7 @@ that are equally complete on either side of the radius valley, it is critically 
 of the transition between terrestrial and gaseous planets is known. In our full stellar sample which includes
 mid-to-late K dwarfs, the measured radius valley location is $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
 reader that the exact value is dependent on the planet's separation (see Fig.~\ref{fig:fmapF}). A consistent value of
-$1.55^{+0.52}_{-0.50}$ is also recovered, albeit with reduced signficance, around stars later than about M2.5V.
+$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced signficance---around stars later than about M2.5V.
 This value is slightly lower than the valley locations measured around Sun-like stars of
 $\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
 \citep{fulton18}.
@@ -1231,8 +1232,8 @@ $\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus
 \subsection{Imperfect clearing of the radius valley} \label{sect:void}
 As noted in Sect.~\ref{sect:fmap} and evidenced in Fig.~\ref{fig:fmap}, the radius valley is not completely
 void of confirmed planets. If the radius valley around low mass stars is produced solely from the late formation
-of terrestrial planets in a gas-poor envirnoment---as the measured slope of the radius valley suggests
-(Fig.~\ref{fig:fmapF})---then the partial filling of the valley may point to a contiuum of formed planet sizes
+of terrestrial planets in a gas-poor environment---as the measured slope of the radius valley suggests
+(Fig.~\ref{fig:fmapF})---then the partial filling of the valley may point to a continuum of formed planet sizes
 rather than two distinct populations of terrestrial and gaseous planets. However if the radius valley is instead
 sculpted by atmospheric post processing---as the radius valley around Sun-like stars seems to be
 \citep{fulton17,fulton18,vaneylen18,martinez19}---then the partial filling of the valley would imply that post
@@ -1245,7 +1246,7 @@ $L_X/L_{\text{bol}}$ ratios \citep{jackson12,shkolnik14}.
 
 Visual
 investigation of the occurrence rates of small close-in planets in the stellar mass bins considered by
-\cite{fulton18} (i.e. $M_s<0.97$ M$_{\odot}$, $0.97 \leq M_s/\text{M}_{\odot} \leq 1.11$, $M_s>1.11$ M$_{\odot}$)
+\citealt{fulton18} (i.e. $M_s<0.97$ M$_{\odot}$, $0.97 \leq M_s/\text{M}_{\odot} \leq 1.11$, and $M_s>1.11$ M$_{\odot}$)
 suggests that the trend of increased filling of the valley with decreasing stellar mass may hold true   
 \citep[c.f. Fig. 9;][]{fulton18}. However we emphasize that this hypothesis has not been tested rigorously.   
 We also note that classical models of photoevaporation do not explicitly consider the effects of
@@ -1256,8 +1257,8 @@ planet \citep{owen19}.
 The simplest explanation for the imperfect clearing of the radius valley instead does not invoke that either
 gas-poor formation or atmospheric post processing is solely responsible for the valley's formation.
 In comparing the slope of the radius valley around low mass and Sun-like stars (Fig.~\ref{fig:fmapF}), it is
-clear that the dominant process affecting the slope of the valley evolves (i.e. $\text{d}r_p/\text{d}\log{F}$)
-from a positive slope to negative slope from Sun-like to low mass stars. However,
+clear that the dominant process affecting the slope of the valley (i.e. $\text{d}r_p/\text{d}\log{F}$)
+evolves from a positive slope to a negative slope from Sun-like to low mass stars. However,
 the threshold $M_s$ dividing each regime is unresolved such that the planet population considered herein
 likely features the superposition of processes such as gas-poor formation and thermally driven mass loss. The
 result of competing processes on the observed planet population could naturally explain the apparent
@@ -1274,13 +1275,13 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
   stars, is demonstrated to persist around low mass stars (i.e. mid-K to mid-M dwarfs).
 \item The radius valley around low mass stars exhibits a negative slope with insolation unlike 
   around Sun-like stars whose measured slope is positive. The observed slope
-  supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation
-  or core-powered mass loss.
+  supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
+  core-powered mass loss, or erosion by planetesimal impacts.
 \item The gaseous planet peak in the bimodal occurrence rates, centered at $\sim 2$ R$_{\oplus}$, effectively
   vanishes around mid-M dwarfs as terrestrial planets ($\lesssim 1.6$ R$_{\oplus}$) increasingly dominate the close-in
   planet population towards later spectral types. The relative fraction of terrestrial to gaseous planets increases
   from $\sim 0.5\pm 0.1 \to 8.5\pm 4.6$ from mid-K to mid-M dwarfs.
-\item The occurrence rate-weighted central radius of each planet peak and the radius valley decrease to smaller
+\item The occurrence rate-weighted central radius of each planet peak and the radius valley shift to smaller
   sizes with decreasing stellar mass. The slope of the gaseous peak's radius with stellar mass is shown to be
   twice that of the terrestrial peak radius indicating that the complete planet population in each stellar mass bin
   tends to converge towards rocky planet cores of $\sim 1$ R$_{\oplus}$ around later spectral types.
